--- a/public/login.html
+++ b/public/login.html
@@ -13,21 +13,30 @@
 
 		<div id="error-text" class="alert alert-danger" role="alert" style="display: none"></div>
 
-		<form method="POST">
-			<!-- Email -->
-			<div class="form-group">
-				<label for="email">Email</label>
-				<input id="email" name="email" class="form-control" type="email" placeholder="Your email address">
-			</div>
+		<div class="d-flex flex-column">
+			<form method="POST">
+				<!-- Email -->
+				<div class="row">
+					<div class="col-10 col-sm-8 col-md-6 col-lg-5 mx-auto">
+						<label for="email">Email</label>
+						<input id="email" name="email" class="form-control" type="email" placeholder="Your email address">
+					</div>
+				</div>
 
-			<!-- Password -->
-			<div class="form-group">
-				<label for="password">Password</label>
-				<input id="password" name="password" class="form-control" type="password" placeholder="Your password">
-			</div>
+				<!-- Password -->
+				<div class="row mt-3">
+					<div class="col-10 col-sm-8 col-md-6 col-lg-5 mx-auto">
+						<label for="password">Password</label>
+						<input id="password" name="password" class="form-control" type="password" placeholder="Your password">
 
-			<button class="btn btn-primary" type="submit">Login</button>
-		</form>
+						<div class="d-flex flex-row" style="margin-top: 1rem">
+							<button class="btn btn-primary" type="submit">Login</button>
+							<a class="btn btn-light ml-auto" href="signup">Signup</a>
+						</div>
+					</div>
+				</div>
+			</form>
+		</div>
 	</div>
 
 	<script lang="javascript">
