--- a/public/login.html
+++ b/public/login.html
@@ -124,6 +124,11 @@
 			window.location.href = "signup" + signupParams
 		}
 	</script>
+
+	<script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
+	<noscript>
+		<img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" />
+	</noscript>
 </body>
 
 </html>
