--- a/public/signup.html
+++ b/public/signup.html
@@ -167,6 +167,11 @@
 			window.location.href = "login" + loginParams
 		}
 	</script>
+
+	<script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
+	<noscript>
+		<img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" />
+	</noscript>
 </body>
 
 </html>
